<resources>
    <string name="app_name">UserApp</string>
    <string name="wave_of_kanagawa">Wave of Kanagawa</string>
    <string name="first_name">First Name</string>
    <string name="user_app">User App</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
    <string name="active_users_0">Active Users: 0</string>
    <string name="deleted_users_0">Deleted Users: 0</string>
    <string name="success">Success!</string>
    <string name="fail">Fail</string>
    <string name="user_already_exists">User with same email already exists</string>
    <string name="user_added_successfully">User added successfully</string>
    <string name="user_updated_successfully">User Updated successfully</string>
    <string name="user_doesn_t_exist">User Doesn\'t exist</string>
    <string name="user_is_up_to_date">User is up to date</string>
    <string name="user_deleted_successfully">User deleted successfully</string>
    <string name="email_is_required">Email is required</string>
    <string name="first_name_is_required">First name is required</string>
    <string name="last_name_is_required">Last name is required</string>
    <string name="please_enter_proper_email">Please enter proper email</string>
    <string name="please_enter_proper_age">Please enter proper age</string>
    <string name="active_users">Active Users</string>
    <string name="deleted_users">Deleted Users</string>
</resources>